--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -62,7 +62,7 @@
 				<p> 
 					<h3>
                         <i class="fab fa-linkedin-in"></i>
-                        <a href="https://www.linkedin.com/in/wagnerk-profile/" target="_blank">https://www.linkedin.com/in/wagnerk-profile/</a>
+                        <a href="https://www.linkedin.com/in/wagnerk-profile/" target="_blank">LinkedIn</a>
                     </h3>
 
 				</p>
