--- a/barbearia/index.html
+++ b/barbearia/index.html
@@ -4,6 +4,11 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
+
+		
+        <!-- The viewport is the user's visible area of a web page.
+        The viewport varies with the device, and will be smaller on a mobile phone than on a computer screen.
+        HTML5 introduced a method to let web designers take control over the viewport, through the <meta> tag. -->
 		<meta name="viewport" content="width=device-width">
 		<title>Barbearia Alura</title>
 		<link rel="stylesheet" href="reset.css">
