--- a/formulario/index.html
+++ b/formulario/index.html
@@ -16,22 +16,40 @@
 
 			<h1 class = "titulo">Cadastro</h1>
 
-			<form class="formulario" name="formulario" onsubmit="return validaAoEnviar()">
-				<label for="nome">Nome e sobrenome</label>
+			<!-- Criei um backend utilizando EC2 da AWS. O endereço http://3.84.10.222:3333/ recebe os dados do formulário e confirma para o usuário  -->
+
+			<form class="formulario" action="http://3.84.10.222:3333/" method="POST" name="formulario" onsubmit="return validaAoEnviar()">
+				<label for="nome">Nome</label>
 				<input type="text" id="nome" name="nome" class="input-padrao" required>
-				<div id="erro_senha">Por favor, preencha o nome completo</div>
+				<div id="erro_nome">
+					<p>Digite seu nome</p>
+					<ul>
+						<li>Utilize apenas letras e espaços</li>
+						<li>Mínimo de 6 caracteres</li>
+					</ul>
+				</div>
 
 				<label for="email">Email</label>
 				<input type="email" id="email" name="email" class="input-padrao" required placeholder="email@dominio.com">
-				<div id="erro_email">Por favor, preencha o email</div>
+				<div id="erro_email">Digite um email válido</div>
 
 				<label for="telefone">Telefone</label>
 				<input type="tel" id="telefone" name="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
-				<div id="erro_senha">Por favor, preencha o telefone</div>
+				<div id="erro_telefone">Digite um telefone válido</div>
 
 				<label for="senha">Senha</label>
 				<input type="password" id="senha" name="senha" class="input-padrao" required>
-				<div id="erro_senha">Por favor, preencha a senha</div>
+				<div id="erro_senha">
+					<p>Digite uma senha com 8 a 15 caracteres</p> 
+					<p>A senha deve conter ao menos:</p>
+					
+					<ul>
+						<li>uma letra minúscula;</li>
+						<li>uma letra maiúscula;</li>
+						<li>um número;</li>
+						<li>um caracter especial.</li>
+					</ul>
+				</div>
 				
 				<label class="checkbox"><input type="checkbox" name="checkbox" checked>Quero receber novidades por email</label>
 
