--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
 	<meta charset="utf-8">
@@ -13,96 +13,96 @@
 
 </head>
 
-<main>
-	<ul class="principal">
-		<li class="painel-esquerdo">
+<body>
 
-			<img src="foto-fake.jpg" class="imagem">
+
+	<main class="principal">
+
+		<div class="painel painel-esquerdo">
+
+			<img src="imagem-curriculo.jpg" class="imagem">
 			<h1>Wagner Kaba</h1>
-			<p>ADVOGADO
-			<p>
-				<hr>
+			<strong>ADVOGADO
+			</strong>
+			<hr>
 
 			<h2>Perfil pessoal</h2>
 			<p>
-				Sou advogado em busca de transição de carreira para a àrea de desenvolvimento de software. Tenho
-				conhecimentos em Java, Spring Framework, Docker e banco de dados SQL.
+				Sou advogado em busca de transição de carreira para a àrea de TI.
+			</p>
+			<p>
+				Tenho conhecimentos em Javascript, NODE JS, HTML, CSS, Java, Spring Framework, Docker e banco de dados
+				MySQL.
 			</p>
 			<h2>Habilidades e competências</h2>
+			<ul class="habilidades">
+				<li> Autodidata </li>
+				<li> Inglês avançado </li>
+				<li> Vontade de aprender </li>
+				<li> Gosto de trabalhar em grupo </li>
 
-			<p> &bull; Autodidata </p>
-			<p> &bull; Inglês avançado </p>
-			<p> &bull; Vontade de aprender </p>
-			<p> &bull; Gosto de trabalhar em grupo </p>
-
-
+			</ul>
 
 			<h2>Contato</h2>
+			<ul>
 
-			<p>
-			<h3>
-				<i class="fas fa-map-marker-alt"></i>
-				Londrina - PR
-			</h3>
-			</p>
-			<p>
-			<h3>
-				<i class="fab fa-whatsapp"></i>
-				<a href="https://api.whatsapp.com/send?phone=5543996180311" target="_blank">43 99618-0311</a>
-			</h3>
-			</p>
-			<p>
-			<h3>
-				<i class="fab fa-linkedin-in"></i>
-				<a href="https://www.linkedin.com/in/wagnerk-profile/" target="_blank">LinkedIn</a>
-			</h3>
 
-			</p>
-			<p>
-			<h3>
-				<i class="fab fa-github"></i>
-				<a href="https://github.com/wagnerkaba" target="_blank">https://github.com/wagnerkaba</a>
-			</h3>
+				<li>
+					<i class="fas fa-map-marker-alt"></i>
+					Londrina - PR
+				</li>
+				<li>
+					<i class="fab fa-whatsapp"></i>
+					<a href="https://api.whatsapp.com/send?phone=5543996180311" target="_blank">43 99618-0311</a>
+				</li>
+				<li>
+					<i class="fab fa-linkedin-in"></i>
+					<a href="https://www.linkedin.com/in/wagnerk-profile/" target="_blank">LinkedIn</a>
+				<li>
+					<i class="fab fa-github"></i>
+					<a href="https://github.com/wagnerkaba" target="_blank">https://github.com/wagnerkaba</a>
 
-			</p>
+				</li>
+			</ul>
 
-		</li>
-		<li class="painel-direito">
+
+		</div>
+		<div class="painel painel-direito">
 
 			<h2>Histórico Profissional</h2>
 
-			<h3>Juvenal Kaba ME (2002 - 2018) </h3>
+			<strong>Juvenal Kaba ME (2002 - 2018) </strong>
 			<p>
 				Responsável pelo administrativo, financeiro, vendas.
 			</p>
 
 
-			<h3>Advogado Autônomo (2009 - presente) </h3>
+			<strong>Advogado Autônomo (2009 - presente) </strong>
 			<p>
 				Trabalho autônomo como advogado.
 			</p>
 
 			<h2>Histórico Educacional</h2>
 
-			<h3>Universidade Federal do Paraná</h3>
+			<strong>Universidade Federal do Paraná</strong>
 			<p>
 				Bacharel em Ciências da Computação, 2002
 			</p>
 
 
-			<h3>Universidade Estadual de Londrina</h3>
+			<strong>Universidade Estadual de Londrina</strong>
 			<p>
 				Bacharel em Direito, 2009
 			</p>
 
 
-			<h3>Digital Innovation One</h3>
+			<strong>Digital Innovation One</strong>
 			<p>
 				TQI Java Developer, 2021
 			</p>
 
 
-			<h3>Desenvolve 2022</h3>
+			<strong>Desenvolve 2022</strong>
 			<p>
 				Curso de formação Fullstack (cursando)
 			</p>
@@ -111,21 +111,12 @@
 			<h2>Interesses e Hobbies</h2>
 
 			<p>
-				Gosto de sair com amigos, viajar e andar de bicicleta.
+				Gosto de sair com amigos, conhecer novos lugares, ler livros e andar de bicicleta.
+		</div>
 
+	</main>
 
-		</li>
-
-
-	</ul>
-
-
-
-
-
-</main>
-
-
+</body>
 
 
 </html>
