--- a/formulario/index.html
+++ b/formulario/index.html
@@ -20,7 +20,7 @@
 
 		<!-- NOVALIDATE: Indicate that the form is not to be validated on submit  -->
 		<form novalidate class="formulario" action="http://ec2-3-84-10-222.compute-1.amazonaws.com:3333/" method="POST"
-			name="formulario" onsubmit="validaAoEnviar(event)">¨
+			name="formulario" onsubmit="validaAoEnviar(event)">
 			<!-- Criei um backend simples (só para praticar) utilizando EC2 da AWS.  -->
 			<!-- O endereço recebe os dados do formulário e confirma para o usuário  -->
 			<!-- O github do backend é: https://github.com/wagnerkaba/nodejs-api -->
