--- a/wpp/index.html
+++ b/wpp/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Envie mensagens sem adicionar o contato</title>
     <link rel="icon" type="image/svg" href="./wpp.svg">
     <style>
